--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
