--- a/package.json
+++ b/package.json
@@ -5,25 +5,38 @@
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "@react-three/fiber": "^7.0.26",
+    "@sanity/client": "^3.2.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "assert": "2.0.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "fs": "0.0.2",
     "gsap": "^3.9.1",
+    "https-browserify": "1.0.0",
+    "os": "0.1.2",
+    "os-browserify": "0.3.0",
     "react": "^17.0.2",
+    "react-app-rewired": "2.1.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sanity": "^2.20.0",
+    "stream-browserify": "3.0.0",
+    "stream-http": "3.2.0",
     "three": "^0.137.5",
-    "web-vitals": "^2.1.0"
+    "url": "^0.11.0",
+    "walletconnect": "^1.7.5",
+    "web-vitals": "^2.1.0",
+    "web3": "^1.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
