--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-app-rewired": "2.1.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "sanity": "^2.20.0",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
