--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-app-rewired": "2.1.9",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
