--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@testing-library/user-event": "^13.2.1",
     "assert": "2.0.0",
     "axios": "^0.26.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.5",
     "fs": "0.0.2",
     "gsap": "^3.9.1",
     "https-browserify": "1.0.0",
+    "jquery": "^3.6.0",
     "os": "0.1.2",
     "os-browserify": "0.3.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-app-rewired": "2.1.9",
+    "react-bootstrap": "^2.2.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
